# Git_exercise

./: 1_user_interaction.py  data_import.py  helper.txt  jupytest1.ipynb  news_fetcher.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: data_import-checkpoint.py
secondary_files/: data_import_lintscore.txt  system_info.py
word_checker/: pyproject.toml
