[tool.poetry]
name = "test4"
version = "0.1.5"
description = "more tests"
authors = ["srl"]
packages = [{include = "word_checker"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "1.5.3"
gensim = "^4.3.2"
word-checker = {path = "word_checker"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
