[tool.poetry]
name = "word-checker"
version = "0.0.1"
description = "Loads word2vec model into our application"
authors = ["SRL"]
packages = [{include = "data_import.py"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
